// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package nsl.internal.fnapi;

option go_package = "namespacelabs.dev/foundation/internal/fnapi";

message UserAuth {
    string username = 1;
    string org      = 2;  // The organization this user is acting as. Only really relevant for robot accounts which authenticate against a repository.
    bytes  opaque   = 3;
}