// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.universe.aws.configuration;

option go_package = "namespacelabs.dev/foundation/universe/aws/configuration";

import "google/protobuf/timestamp.proto";

message Configuration {
    string profile                   = 1;
    bool   use_injected_web_identity = 2;
    string assume_role_arn           = 3;
    string region                    = 4;
    Credentials static               = 5;
}

message Credentials {
    // The access key ID that identifies the temporary security credentials.
    string access_key_id = 1;

    // The date on which the current credentials expire.
    google.protobuf.Timestamp expiration = 2;

    // The secret access key that can be used to sign requests.
    string secret_access_key = 3;

    // The token that users must pass to the service API to use the temporary
    // credentials.
    string session_token = 4;
}